# project

./: .gitattributes  .gitignore
AutoCamTracker-main/: README.md  optimization_and_decoupling_report.md  pyproject.toml  requirements.txt
AutoCamTracker-main/.github/: CODEOWNERS  pull_request_template.md
AutoCamTracker-main/ios/DockKitTester/: Package.swift  README.md
AutoCamTracker-main/ios/DockKitTester/DockKitTester.xcodeproj/: project.pbxproj
AutoCamTracker-main/management/AutoCamTracker_Development/0611/: AutoCamTracker_V1.1_Update_Summary.md
AutoCamTracker-main/management/AutoCamTracker_Development/0612/: V1.1_Input_Tracker_Reset_Check.md
AutoCamTracker-main/management/AutoCamTracker_Development/0617/: Master_Feature_Automation_Standards.md
AutoCamTracker-main/src/autocamtracker/: __init__.py  main.py
AutoCamTracker-main/src/autocamtracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AutoCamTracker-main/src/autocamtracker/core/: performance_evaluation.py  pipeline_processor.py  self_test.py  track_shot_plan.py
AutoCamTracker-main/src/autocamtracker/server/: websocket_server.py
AutoCamTracker-main/src/autocamtracker/tracking/: auto_feature_sampler.py  detection_store.py  reid_embedding.py  target_tracker.py  (+2 more)
AutoCamTracker-main/tests/: test_desktop_optimizations.py  test_performance_evaluation.py  test_tracking_server.py
AutoCamTracker-main/tools/: AutoCamTracker_V1.65.command  AutoCamTracker_V1.651.command  AutoCamTracker_V1.71.command  AutoCamTracker_V1.73.command  AutoCamTracker_V1.75.command
(+44 files in other folders)
